# tdverpy

./: LICENSE  README.md  default.nix  demo.sh  setup.cfg  shell.nix  working_notes
.github/workflows/: ci.yml
tdver/: __init__.py  meta.py
tests/behavior/: .coverage  test.py
