[metadata]
name = tdver
version = @version@
# description = TODO
long_description = file: README.md, CHANGELOG.md, LICENSE
# keywords = one, two
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
	pygit2
	PyYAML

[options.entry_points]
console_scripts =
    tdver = tdver:main
